# mcp-pa

./: .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_server.py
.claude/: CLAUDE_INSTRUCTIONS.md  CLAUDE_PROJECT_SNIPPET.txt  PROJECT_INSTRUCTIONS.md  project_context.md
.devcontainer/: Dockerfile  setup-github.sh
.github/workflows/: publish.yml  test.yml
archive/: requirements-http.txt  requirements-test.txt
deployment/: Dockerfile  docker-compose.yml  init-db.sql
docs/: CONFIGURATION.md  MIGRATION.md  architecture.md  cloud-architecture.md  development-notes.md  quickstart.md  remote-database-setup.md  security.md
examples/: README.md  basic_usage.py
scripts/: check_performance_regression.py  run_http_server.py  run_tests.sh  test_framework_validation.py
src/: __init__.py  __main__.py  auth_service.py  config.py  database.py  database_factory.py  database_interface.py  document_manager.py  embedding_service.py  http_config.py  http_server.py  intelligent_retrieval.py  models.py  postgres_database.py  server.py  sqlite_database.py  tinydb_database.py
src/auth/: __init__.py  client_authenticator.py  client_registry.py  discovery.py  external_providers.py  oauth21_provider.py  pkce_verifier.py  token_manager.py  token_validator.py
src/config/: __init__.py  http_config.py  local_config.py
src/security/: __init__.py  audit_logger.py  middleware.py  validators.py
tests/: conftest.py
tests/integration/: test_database_integration.py  test_http_server.py  test_simple.py
tests/performance/: test_performance.py
tests/unit/: test_auth_service.py  test_basic_python.py  test_embedding_service.py  test_intelligent_retrieval.py  test_model_validation.py  test_models.py
