[project]
name = "mcp-pa"
version = "0.2.0"
description = "Personal Assistant MCP Server with SQLite/TinyDB support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.2",
    "tinydb>=4.8.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcp-pa = "src.server:main"
