[project]
name = "mcp-personal-assistant"
version = "0.2.0"
description = "Personal Assistant MCP Server with SQLite/TinyDB support for status tracking, project management, todos, calendar functionality, and document storage"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "MCP Personal Assistant Contributors"}
]
maintainers = [
    {name = "MCP Personal Assistant Contributors"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
]
keywords = [
    "mcp",
    "model-context-protocol", 
    "personal-assistant",
    "productivity",
    "project-management",
    "claude",
    "sqlite",
    "todo",
    "calendar"
]
dependencies = [
    "mcp>=1.0.0",
    "python-dateutil>=2.8.2",
    "tinydb>=4.8.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/swapnilsurdi/mcp-pa"
Repository = "https://github.com/swapnilsurdi/mcp-pa"
Issues = "https://github.com/swapnilsurdi/mcp-pa/issues"
Documentation = "https://github.com/swapnilsurdi/mcp-pa#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
http = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psycopg2-binary>=2.9.7",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcp-personal-assistant = "src.server:main"
